# DFlat-tensorflow

./: .gitignore  .readthedocs.yaml  CITATION.cff  MANIFEST.in  changelog.txt  license.md  readme.md  requirements.txt  requirements_condalist.txt  requirements_pipfreeze.txt  setup.cfg  setup.py  setup_execute_get_data.py
dflat/: .gitattributes  .gitignore
dflat/GDSII_utilities/: __init__.py  generate_gds_file.py
dflat/cell_library_generation/: __init__.py  generate_cell_library.py  generate_latentMorph_library.py  generate_superEllipse_library.py
dflat/data_structure/: __init__.py  detector_params.py  fourier_params.py  rcwa_params.py
dflat/datasets_image/: __init__.py  load_general_images.py  readme.txt
dflat/datasets_metasurface_cells/: __init__.py  initialization_utilities.py  libraryClass.py  util_library_lookup.py
dflat/fourier_layer/: __init__.py  fourier_layers.py  ms_initialization_utilities.py
dflat/image_layer/: __init__.py  readme.txt  rendering_layers.py  scene_generator_FT3D.py
dflat/image_layer_inDev/: __init__.py  rendering_layers.py
dflat/metasurface_library/: __init__.py  libraryClass.py
dflat/neural_optical_layer/: __init__.py  mlp_initialization_utilities.py  neural_model_util.py  neural_optical_layers.py
dflat/optimization_helpers/: __init__.py  pipeline_class.py  train_helper.py
dflat/tools/: __init__.py  (+5 more)
docs/: .readthedocs.yaml  requirements.txt  requirements_all.txt
examples/: Demo_optimize_broadband_rcwa_metalens.ipynb  Demo_optimize_dual_polarization_hologram.ipynb  Demo_optimize_monochromatic_neural_metalens.ipynb  Intro_Dflat_Library_and_Neural_Models_tutorial.ipynb  Intro_rcwa_simulate_differentiate_tutorial.ipynb  Tutorial_I_Dflat_Field_Propagation.ipynb  Tutorial_I_Dflat_Library_and_Neural_Models.ipynb  Tutorial_I_RCWA_and_Physical_Layers.ipynb  achromatic_metalens_rcwa.ipynb  achromatic_metalens_rcwa.py  broadband_metalens_rcwa.py  broadband_metalens_rcwa_OUTDATED.ipynb  deprecate_metalens_neural.ipynb  dual_polarization_hologram.ipynb  dual_polarization_hologram.py  metalens.py  metalens_neural.ipynb  metalens_neural.py  metalens_neural_OUTDATED.ipynb  multi_wavelength_rcwa_metalens.ipynb  multi_wavelength_rcwa_metalens.py  neural_metalens.py  readme.txt  test_gpu.py
src/: .gitattributes  .gitignore
tests/: readme.txt  run_unit_tests.py
(+748 files in other folders)
