[metadata]
name = DFlat
version = 2.3.0
author = Dean Hazineh
author_email = dhazineh@g.harvard.edu
description = Simulation package for flat optics
long_description_content_type = text/markdown
long_description = file: readme.md
url = https://github.com/DeanHazineh/DFlat
project_ulrs = 
	Bug Tracker = https://github.com/DeanHazineh/DFlat/issues
classifiers = 
	Programming Language :: Python :: 3
	License:: GNU GENERAL PUBLIC LICENSE v3.0
	Operating System :: OS Independent

