[metadata]
name = DFlat
version = 4.0.0
author = Dean Hazineh
author_email = dhazineh@g.harvard.edu
description = D-Flat is a forward and inverse design framework for flat optics. Although specially geared for the design of metasurface optics, it may be used for any end-to-end imaging and sensing task.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/DeanHazineh/DFlat
classifiers = 
	Programming Language :: Python :: 3
	License:: GNU GENERAL PUBLIC LICENSE v3.0
	Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
	protobuf>=3.20.3 < 4.21
    scikit-learn
	setuptools
	numpy
	tensorflow_gpu==2.10.*
	tensorflow_probability==0.18.*
	matplotlib
	keras_flops
	mat73
	opencv-python
	pandas
	gdspy
	imageio
	tqdm
	scipy


[options.extras_require]
dev =
    black