[metadata]
name = DFlat
version = 1.0.0
author = Dean Hazineh
author_email = dhazineh@g.harvard.edu
description = D-Flat is a forward and inverse design framework for flat optics. Although specially geared for the design of metasurface optics, it may be used for any end-to-end imaging and sensing task.
long_description_content_type = text/markdown
long_description = file: readme.md
url = https://github.com/DeanHazineh/DFlat-pytorch
classifiers = 
	Programming Language :: Python :: 3
	License:: GNU GENERAL PUBLIC LICENSE v3.0
	Operating System :: OS Independent


[options]
packages = find:
include_package_data = True
install_requires =
	pip
	requests
    	setuptools
	scikit-learn
	numpy
	tensorflow_gpu==2.10.1
	tensorflow_probability==0.18.0
	matplotlib
	keras_flops
	mat73
	opencv-python
	pandas
	gdspy
	imageio
	tqdm
	scipy

